--- a/client/src/components/molecules/Friends/Friends.css
+++ b/client/src/components/molecules/Friends/Friends.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 520px;
 }
+
 .mainFriendContainer {
   display: flex;
   flex-direction: column;
@@ -49,4 +50,55 @@ button {
 .koniFriends {
   width: 200px;
   height: 10px;
+}
+
+
+.friends-container {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.friend-list {
+  list-style: none;
+  padding: 0;
+}
+
+.friend-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.friend-name {
+  flex-grow: 1;
+  text-decoration: none;
+  color: #333;
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.add-friend {
+  margin-top: 20px;
+}
+
+.friend-input {
+  width: 200px;
+  padding: 5px;
+  margin-right: 10px;
+}
+
+.add-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
 }
