--- a/client/src/components/molecules/Friends/Friends.css
+++ b/client/src/components/molecules/Friends/Friends.css
@@ -54,8 +54,11 @@ button {
 
 
 .friends-container {
-  max-width: 400px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .friend-list {
@@ -67,6 +70,7 @@ button {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  gap: 20px;
 }
 
 .friend-name {
@@ -86,12 +90,17 @@ button {
 
 .add-friend {
   margin-top: 20px;
+  gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .friend-input {
   width: 200px;
   padding: 5px;
   margin-right: 10px;
+  background-color: #d5d6d8;
 }
 
 .add-button {
@@ -101,4 +110,24 @@ button {
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.puzzle-content-wrapper {
+  display: flex;
+  background-color: #b7c0d8;
+  border-radius: 40px;
+  padding: 20px;
+  width: 600px;
+  box-shadow: 5px 5px 17px 2px rgba(0, 0, 0, 0.36);
+  justify-content: space-around;
+}
+
+.no-friend-list {
+  font-size: 25px;
+}
+
+.title-friend {
+  text-align: center;
+  font-size: 50px;
+  margin: 0;
 }
