--- a/client/src/components/organisms/Profile/Profile.css
+++ b/client/src/components/organisms/Profile/Profile.css
@@ -1,13 +1,85 @@
+#profileImage {
+  width: 250px;
+  border-radius: 5px;
+}
+
 .profileChangeName {
   align-items: center;
 }
 
-.btn-pencil {
+.btn-edit-user {
   border: none;
-  width: 30px;
+  width: 40px;
+  background-color: #b7c0d8;
 }
 
-.btn-pencil:hover {
+.btn-edit-user img {
+  width: 100%;
+}
+
+.btn-edit-user :hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+
+.profileContainer {
+  margin: 0 20px 0 220px;
+  display: flex;
+  justify-content: left;
+  border-radius: 10px;
+  background-color: #b7c0d8;
+}
+
+.profileSubDiv {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#user-name {
+  font-size: 30px;
+  transition: font-size 0.3s ease;
+}
+
+#user-rating {
+  font-size: 20px;
+  transition: font-size 0.3s ease;
+}
+
+.statsDiv {
+  border: 2px solid gray;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 20px;
+  transition: font-size 0.3s ease;
+}
+
+.statsDiv p {
+  margin: 5px;
+}
+
+@media (max-width: 820px) {
+  .profileContainer {
+    flex-direction: column;
+    align-items: center;
+    transition: font-size 0.3s ease;
+    margin-left: 160px;
+  }
+
+  #profileImage {
+    /* width: 150px; */
+    align-self: center;
+  }
+  #user-name {
+    font-size: 24px;
+    transition: font-size 0.3s ease;
+  }
+  #user-rating {
+    font-size: 18px;
+    transition: font-size 0.3s ease;
+  }
+
+  .statsDiv {
+    font-size: 18px;
+    transition: font-size 0.3s ease;
+  }
 }
