--- a/client/src/components/molecules/Friends/Friends.css
+++ b/client/src/components/molecules/Friends/Friends.css
@@ -129,3 +129,49 @@ button {
   font-size: 50px;
   margin: 0;
 }
+
+.avatar {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
+
+.friend-cards {
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  gap: 30px;
+}
+
+.friend-card{ 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: 5px;
+  background-color: #b7c0d8;
+  padding: 15px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 17px 2px rgba(0, 0, 0, 0.36);
+}
+
+.add-button {
+  background-color: #272f36;
+  color: #ebe3e3;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.custom-button{
+  background-color: #272f36;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 70px;
+}
