--- a/client/src/components/molecules/Friends/Friends.css
+++ b/client/src/components/molecules/Friends/Friends.css
@@ -58,7 +58,7 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 30px;
+  gap: 50px;
 }
 
 .friend-list {
@@ -96,7 +96,7 @@ button {
 }
 
 .friend-input {
-  width: 200px;
+  width: 250px;
   padding: 5px;
   margin-right: 10px;
   background-color: #d5d6d8;
@@ -116,7 +116,7 @@ button {
   background-color: #b7c0d8;
   border-radius: 40px;
   width: 600px;
-  box-shadow: 5px 5px 17px 2px rgba(0, 0, 0, 0.36);
+  box-shadow: 2px 2px 13px 2px rgba(0, 0, 0, 0.36);
   justify-content: space-around;
 }
 
@@ -138,9 +138,12 @@ button {
 
 .friend-cards {
   display: flex;
-  justify-content:space-between;
+  justify-content:space-around;
+  padding: 10px;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 30px;
+  gap: 40px;
+  max-width: 800px;
 }
 
 .friend-card{ 
@@ -153,7 +156,7 @@ button {
   background-color: #b7c0d8;
   padding: 15px;
   border-radius: 15px;
-  box-shadow: 5px 5px 17px 2px rgba(0, 0, 0, 0.36);
+  box-shadow: 2px 2px 13px 2px rgba(0, 0, 0, 0.36);
 }
 
 .add-button {
