--- a/client/src/components/pages/ProfilePage/ProfilePage.css
+++ b/client/src/components/pages/ProfilePage/ProfilePage.css
@@ -19,7 +19,7 @@ h1 {
   gap: 20px;
 }
 
-.profileChangeName {
+/* .profileChangeName {
   display: flex;
   gap: 20px;
   margin-right: 100px;
@@ -36,9 +36,9 @@ h1 {
   justify-content: center;
   align-items: center;
   margin: 30px;
-}
+} */
 
 .Profile-wrapper {
   background-color: #e8edf9;
-  height: 100vh;
+  /* height: 100vh; */
 }
