--- a/client/src/components/molecules/MainPagePuzzles/MainPagePuzzles.css
+++ b/client/src/components/molecules/MainPagePuzzles/MainPagePuzzles.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   gap: 100px;
-  height: 400px;
+  height: 400px !important;
   flex: 1;
 }
 
@@ -12,7 +12,7 @@
   background-color: #b7c0d8;
   border-radius: 40px;
   padding: 35px;
-  width: 85%;
+  width: 85% !important;
   box-shadow: 5px 5px 17px 2px rgba(0, 0, 0, 0.36);
   justify-content: space-around;
 }
