--- a/client/src/components/organisms/History/History.css
+++ b/client/src/components/organisms/History/History.css
@@ -1,10 +1,10 @@
 .history-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex: 1;
   margin-left: 200px;
-  padding: 20px;
+  padding: 50px;
   border-top: 1px solid #b7c0d8;
 }
 
@@ -12,7 +12,8 @@
   text-align: center;
   font-size: 50px;
   padding: 20px 0 30px 200px;
-  margin: 0;
+  margin:0;
+  margin-left: 50px;
 }
 
 .board-img {
@@ -22,6 +23,10 @@
 }
 
 .board-png {
-  width: 175px;
-  height: 175px;
+  width: 170px;
+  height: 170px;
+}
+
+.game-status-and-duration{
+  text-align: center;
 }
