--- a/client/src/components/pages/GamePage/GamePage.css
+++ b/client/src/components/pages/GamePage/GamePage.css
@@ -104,6 +104,14 @@
   margin-left: auto;
   font-size: 15px;
 }
+.message__notification {
+  background-color: rgb(194, 202, 243);
+  max-width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: auto;
+  font-size: 15px;
+}
 .message__chats > p {
   font-size: 13px;
 }
