--- a/client/src/components/atoms/Board/Board.css
+++ b/client/src/components/atoms/Board/Board.css
@@ -11,14 +11,14 @@
   border-radius: 5px;
 }
 
-.button-container {
+.game-button-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 40px;
 }
 
-.button-container button {
+.game-button-container button {
   margin: 0;
   border-radius: 5px;
   border: 2px solid grey;
