--- a/client/src/components/pages/MainPage/MainPage.css
+++ b/client/src/components/pages/MainPage/MainPage.css
@@ -5,6 +5,7 @@
   background-color: #e8edf9;
   margin-left: 200px;
   padding: 40px 0;
+  height: 93.5vh !important;
 }
 
 .text-buttons-wrapper-main {
