--- a/client/src/components/atoms/Board/Board.css
+++ b/client/src/components/atoms/Board/Board.css
@@ -36,3 +36,21 @@
 .room-id-container:focus {
   outline: none;
 }
+
+.interface-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.turn-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px grey solid;
+  border-radius: 10px;
+  height: 80px;
+  width: 150px;
+  align-self: center;
+  font-size: 26px;
+  padding: 10px 30px;
+}
