--- a/client/src/components/molecules/ChatFooter/ChatFooter.css
+++ b/client/src/components/molecules/ChatFooter/ChatFooter.css
@@ -1,5 +1,6 @@
 .chat__footer {
   width: 100%;
+  height: 4vh !important;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   padding-left: 20px;
