--- a/client/src/components/molecules/MainPagePlaySection/MainPagePlaySection.css
+++ b/client/src/components/molecules/MainPagePlaySection/MainPagePlaySection.css
@@ -3,8 +3,20 @@
   align-items: center;
   justify-content: center;
   gap: 100px;
-  height: 400px;
-  flex: 1;
+  /* height: 560px; */
+  padding: 100px 30px;
+  border: 2px solid grey;
+  border-radius: 20px;
+  margin: 50px 40px;
+  /* flex: 1; */
+}
+
+.image-wrapper {
+  align-self: flex-start;
+}
+
+.text-buttons-wrapper-main {
+  align-self: flex-start;
 }
 
 .button-19.play-bot,
