--- a/client/src/components/organisms/History/History.css
+++ b/client/src/components/organisms/History/History.css
@@ -1,10 +1,10 @@
 .history-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex: 1;
   margin-left: 200px;
-  padding: 50px;
+  padding: 30px;
   border-top: 1px solid #b7c0d8;
 }
 
@@ -12,8 +12,8 @@
   text-align: center;
   font-size: 50px;
   padding: 20px 0 30px 200px;
-  margin:0;
-  margin-left: 50px;
+  margin: 0;
+  margin-left: 10px;
 }
 
 .board-img {
@@ -27,6 +27,11 @@
   height: 170px;
 }
 
-.game-status-and-duration{
+.names-and-date {
+  width: 250px;
+}
+
+.game-status-and-duration {
   text-align: center;
+  width: 250px;
 }
